--- a/NanumGothic.css
+++ b/NanumGothic.css
@@ -5,23 +5,23 @@
     font-family: 'Nanum Gothic';
     font-style: normal;
     font-weight: 400;
-    src: url(./fonts/NanumGothic-Regular.eot);
-    src: url(./fonts/NanumGothic-Regular.eot?#iefix) format('embedded-opentype'), url(./fonts/NanumGothic-Regular.woff2) format('woff2'), url(./fonts/NanumGothic-Regular.woff) format('woff'), url(./fonts/NanumGothic-Regular.ttf) format('truetype');
+    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.eot);
+    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.eot?#iefix) format('embedded-opentype'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.woff2) format('woff2'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.woff) format('woff'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Nanum Gothic';
     font-style: normal;
     font-weight: 700;
-    src: url(./fonts/NanumGothic-Bold.eot);
-    src: url(./fonts/NanumGothic-Bold.eot?#iefix) format('embedded-opentype'), url(./fonts/NanumGothic-Bold.woff2) format('woff2'), url(./fonts/NanumGothic-Bold.woff) format('woff'), url(./fonts/NanumGothic-Bold.ttf) format('truetype');
+    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Bold.eot);
+    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Bold.eot?#iefix) format('embedded-opentype'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Bold.woff2) format('woff2'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Bold.woff) format('woff'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Bold.ttf) format('truetype');
 }
 
 @font-face {
     font-family: 'Nanum Gothic';
     font-style: normal;
     font-weight: 800;
-    src: url(./fonts/NanumGothic-ExtraBold.eot);
-    src: url(./fonts/NanumGothic-ExtraBold.eot?#iefix) format('embedded-opentype'), url(./fonts/NanumGothic-ExtraBold.woff2) format('woff2'), url(./fonts/NanumGothic-ExtraBold.woff) format('woff'), url(./fonts/NanumGothic-ExtraBold.ttf) format('truetype');
+    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-ExtraBold.eot);
+    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-ExtraBold.eot?#iefix) format('embedded-opentype'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-ExtraBold.woff2) format('woff2'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-ExtraBold.woff) format('woff'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-ExtraBold.ttf) format('truetype');
 }
 
