--- a/NanumGothic.css
+++ b/NanumGothic.css
@@ -5,8 +5,8 @@
     font-family: 'Nanum Gothic';
     font-style: normal;
     font-weight: 400;
-    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.eot?raw=true);
-    src: url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.eot?raw=true#iefix) format('embedded-opentype'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.woff2?raw=true) format('woff2'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.woff?raw=true) format('woff'), url(https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.ttf?raw=true) format('truetype');
+    src: url('https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.eot?raw=true');
+    src: url('https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.eot?raw=true#iefix') format('embedded-opentype'), url('https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.woff2?raw=true') format('woff2'), url('https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.woff?raw=true') format('woff'), url('https://cdn.rawgit.com/Fil-Zhaoxie/NanumGothic/tree/master/fonts/NanumGothic-Regular.ttf?raw=true') format('truetype');
 }
 
 @font-face {
